--- a/doc/cdoperator.tex
+++ b/doc/cdoperator.tex
@@ -39,11 +39,14 @@ be rewritten using the operator equivalent method by Stevens\cite{hutchings64-22
 	      \langle\sum_i Z_l^{m}(\Omega_i)\rangle = |p_{lm}| \theta_{l} \langle O_l^m(\mbf J)\rangle_T 
 	      \end{equation} 
 
-Here, $p_{lm}$ are the pre factors of harmonic tesseral
-functions and $\theta_l$
+For the notation see \cite{hutchings64-227}:
+ $p_{nm}$ the pre factors of harmonic tesseral
+functions $Z_{lm}(\Omega)$ as given in table IV in \cite{hutchings64-227} and in appendix~\ref{tesseral},
+ and $\theta_l$
 corresponds to the number of $4f$ electrons ($\nu$) in the
 $4f^{\nu}$ configuration for $l=0$ and to
  the Stevens factors $\alpha$,$\beta$ and $\gamma$ for $l=$~2,4,6, respectively.
+
 This results in the following expression for the chargedensity:
 		  
   \begin{equation}\label{chargedensity_operator2}
