rixs implemented in module so1ion - now with Ipisigma ... and Ileftright

--- a/doc/mcdiff.tex
+++ b/doc/mcdiff.tex
@@ -390,8 +390,8 @@ Here, dropping the site index $n$, $\Theta$ is the Bragg scattering angle and
 $z_1, z_2$ and $z_3$ aree components of the magnetization vector with respect
 to the coordinate system $[\mbf u_1,\mbf u_2,\mbf u_3]$. The scattering plane, defined by the
 direction of the incident and final wave vectors  $\mbf k$ and $\mbf k'$, contains $\mbf u_1$ lying
-perpendicular and in the sense of $\mbf k$ and $\mbf u_3$ antiparallel to the scattering
-vector $\mbf Q=\mbf k'-\mbf k$. The scattering channels for $F^{(1)}$ and $F^(2)$ terms are considered
+perpendicular and in the sense of $\mbf k$ and $\mbf u_3$ parallel to the scattering
+vector $\mbf Q=\mbf k-\mbf k'$. The scattering channels for $F^{(1)}$ and $F^(2)$ terms are considered
 separately and no interference is considered. 
 
 To determine the azimuthal dependence the $z_i$ are expanded in terms of the components
